backend-server/k8s-services/chirpstack/chirpstack-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: chirpstack-strip-prefix
  namespace: iot
spec:
  stripPrefix:
    prefixes:
      - /chirpstack
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: chirpstack
  namespace: iot
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      priority: 20
      match: Host(`93d92c4a-e3bf-4ea6-93c6.afab44153cac.isard.nuvulet.itb.cat`) && PathPrefix(`/chirpstack`)
      middlewares:
        - name: chirpstack-strip-prefix
          namespace: iot
      services:
        - name: chirpstack
          port: 8080
    - kind: Rule
      priority: 15
      match: Host(`93d92c4a-e3bf-4ea6-93c6.afab44153cac.isard.nuvulet.itb.cat`) && PathPrefix(`/api`)
      services:
        - name: chirpstack
          port: 8080
    - kind: Rule
      priority: 10
      match: Host(`93d92c4a-e3bf-4ea6-93c6.afab44153cac.isard.nuvulet.itb.cat`) && PathRegexp(`\.(js|css|png|ico|woff2?)$`)
      services:
        - name: chirpstack
          port: 8080
  tls: {}
